--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,26 @@
-# Miscellaneous
-*.class
+# Visual Studio системные папки
+.vs/
+Debug/
+Release/
+x64/
+x86/
+
+# Файлы сборки и логов
+*.sln.ghost
+*.suo
+*.user
+*.userosscache
+*.sln.doccache
+*.sdf
+*.opensdf
+*.pdb
+*.obj
 *.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
+*.tlog
+*.lastbuildstate
+*.idb
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-/coverage/
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Временные файлы компилятора
+ipch/
+*.VC.db
+*.VC.opendb
